--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,6 @@ body{
 body::-webkit-scrollbar{
   display: none;
 }
-p{
-  display: inline-block;
-  vertical-align: middle;
-}
 .bg{
   position: absolute;
   top:0px;
@@ -97,6 +93,10 @@ td.info2{
   display: inline;
   align-items: left ;
 }
+.textbox_friends p{
+  display: inline-block;
+  vertical-align: middle;
+}
 .textbox_mi{
   position: relative;
   width: 50px;
@@ -112,8 +112,8 @@ td.info2{
 }
 .textbox_bou{
   position: relative;
-  width: 26px;
-  height: 10px;
+  width: 50px;
+  height: 50px;
   background-repeat: no-repeat;
   animation-name: move_bou;
   animation-duration: 3s;
@@ -157,6 +157,58 @@ td.info2{
   animation-name: move_to;
   animation-duration: 3s;
   animation-delay: 0.8s;
+  animation-direction: reverse;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+}
+.textbox_mo{
+   position: relative;
+   width: 50px;
+   height: 50px;
+   background-repeat: no-repeat;
+   animation-name: move_mo;
+   animation-duration: 3s;
+   animation-delay: 1s;
+   animation-direction: reverse;
+   animation-timing-function: linear;
+   animation-fill-mode: forwards;
+   animation-iteration-count: infinite;
+ }
+.textbox_da{
+  position: relative;
+  width: 50px;
+  height: 50px;
+  background-repeat: no-repeat;
+  animation-name: move_da;
+  animation-duration: 3s;
+  animation-delay: 1.2s;
+  animation-direction: reverse;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+}
+.textbox_chi{
+  position: relative;
+  width: 50px;
+  height: 50px;
+  background-repeat: no-repeat;
+  animation-name: move_chi;
+  animation-duration: 3s;
+  animation-delay: 1.4s;
+  animation-direction: reverse;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+}
+.textbox_ex{
+  position: relative;
+  width: 50px;
+  height: 50px;
+  background-repeat: no-repeat;
+  animation-name: move_ex;
+  animation-duration: 3s;
+  animation-delay: 1.6s;
   animation-direction: reverse;
   animation-timing-function: linear;
   animation-fill-mode: forwards;
@@ -241,6 +293,74 @@ td.info2{
   50%{
     opacity: 1;
     background-image: url("../img/to.png");
+    transform: rotateY(0deg);
+  }
+  100%{
+    opacity: 0;
+    background-color: #FFFFFF;
+    transform: rotateY(180deg);
+  }
+}
+@keyframes move_mo {
+  0% {
+    opacity: 0;
+    background-color: #FFFFFF;
+    transform: rotateY(-180deg);
+  }
+  50%{
+    opacity: 1;
+    background-image: url("../img/mo.png");
+    transform: rotateY(0deg);
+  }
+  100%{
+    opacity: 0;
+    background-color: #FFFFFF;
+    transform: rotateY(180deg);
+  }
+}
+@keyframes move_da {
+  0% {
+    opacity: 0;
+    background-color: #FFFFFF;
+    transform: rotateY(-180deg);
+  }
+  50%{
+    opacity: 1;
+    background-image: url("../img/da.png");
+    transform: rotateY(0deg);
+  }
+  100%{
+    opacity: 0;
+    background-color: #FFFFFF;
+    transform: rotateY(180deg);
+  }
+}
+@keyframes move_chi {
+  0% {
+    opacity: 0;
+    background-color: #FFFFFF;
+    transform: rotateY(-180deg);
+  }
+  50%{
+    opacity: 1;
+    background-image: url("../img/chi.png");
+    transform: rotateY(0deg);
+  }
+  100%{
+    opacity: 0;
+    background-color: #FFFFFF;
+    transform: rotateY(180deg);
+  }
+}
+@keyframes move_ex {
+  0% {
+    opacity: 0;
+    background-color: #FFFFFF;
+    transform: rotateY(-180deg);
+  }
+  50%{
+    opacity: 1;
+    background-image: url("../img/!.png");
     transform: rotateY(0deg);
   }
   100%{
