--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,175 @@
-body{
+#app{
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  min-width: 1100px; min-height: 650px;
+  background-color: #FFFFFF;
+  overflow: hidden;
+  opacity: 0;
+  z-index: 3;
+  animation: show-bg 4s ease-out 0s forwards;
+}
+#prologue {
+  position: absolute;
+  top: 0; left: 0;
+  width: 200%; height: 100%;
+}
+p {
+  margin: 0;
+}
+/*** 共通: .word-1, .word-2 ***/
+#prologue .word-1,
+#prologue .word-2 {
+  position: absolute;
+  top: calc(50% - 60px);
+  height: 120px;
+}
+#prologue .word-1 div,
+ #prologue .word-2 div {
+   float: left;
+   width: 120px; height: 120px;
+   border: dashed 1px #888;
+   border-right: none;
+   box-sizing: border-box;
+}
+#prologue .word-1 div p,
+#prologue .word-2 div p {
+  width: 100%; height: 100%;
+  font-size: 80px;
+  color: #d644a9;
+  text-align: center;
+  line-height: 120px;
+  opacity: 0;
+}
+#prologue .word-1 div:last-child,
+#prologue .word-2 div:last-child {
+  border-right: dashed 1px #888;
+}
+#prologue .word-1:after,
+#prologue .word-2:after {
+  content: ""; display: block; clear: both;
+}
+/*** .word-1 ***/
+#prologue .word-1 { left: calc(25% - 240px); }
+
+/*** .word-2 ***/
+#prologue .word-2 { right: 80px; }
+
+/*** .connect-line ***/
+#prologue .connect-line {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+}
+#prologue .connect-line .point {
+  position: absolute; top: calc(50% + 90px);
+  width: 20px; height: 20px;
+  background-color: #666;
+  border-radius: 50%;
+}
+#prologue .connect-line .point-1 { left: calc(25% - 250px); }
+#prologue .connect-line .point-2 { left: calc(25% + 350px); }
+#prologue .connect-line .point-3 { right: 70px; transform: scale(0); }
+
+#prologue .line {
+  position: absolute;
+  top: calc(50% + 99px);
+  height: 1px;
+  overflow: hidden;
+}
+#prologue .line:after {
+  content: ""; display: block;
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background-color: #666;
+  transform: translateX(-100%);
+}
+#prologue .line-1 { width: 600px; left: calc(25% - 240px); }
+#prologue .line-2 {
+  width: calc(((50% - 480px) / 2) + (50% - 80px));
+  right: 80px;
+}
+
+/*** .word-1 ***/
+#prologue .word-1 div:nth-child(1) p { animation: show-word 0.6s ease-out 0.0s forwards; }
+#prologue .word-1 div:nth-child(2) p { animation: show-word 0.6s ease-out 0.2s forwards; }
+#prologue .word-1 div:nth-child(3) p { animation: show-word 0.6s ease-out 0.4s forwards; }
+#prologue .word-1 div:nth-child(4) p { animation: show-word 0.6s ease-out 0.6s forwards; }
+#prologue .word-1 div:nth-child(5) p { animation: show-word 0.6s ease-out 0.8s forwards; }
+
+/*** .line-1 ***/
+#prologue .line-1:after { animation: draw-line 1.2s ease 0s forwards; }
+
+/*** #prologue: ここで右側に移動する ***/
+#prologue { animation: move-prologue 0.8s ease 1.2s forwards; }
+
+/*** .line-2 ***/
+#prologue .line-2:after { animation: slash-line 1.6s ease 1.2s forwards; }
+
+/*** .point-3 ***/
+#prologue .point-3 { animation: put-point 1s ease-out 2s forwards; }
+
+/*** .word-2 ***/
+#prologue .word-2 div:nth-child(1) p { animation: show-word 0.6s ease-out 1.6s forwards; }
+#prologue .word-2 div:nth-child(2) p { animation: show-word 0.6s ease-out 1.8s forwards; }
+#prologue .word-2 div:nth-child(3) p { animation: show-word 0.6s ease-out 2.0s forwards; }
+#prologue .word-2 div:nth-child(4) p { animation: show-word 0.6s ease-out 2.2s forwards; }
+#prologue .word-2 div:nth-child(5) p { animation: show-word 0.6s ease-out 2.4s forwards; }
+
+/*** .word-2: ここで次のパートに繋ぐための回転 ***/
+#prologue .word-2 { animation: rotate-word-2 0.4s ease 2.8s forwards; }
+@keyframes show-word {
+  0%   { transform: scale(0.4); opacity: 0; }
+  70%  { transform: scale(1.05); opacity: 1; }
+  100% { transform: scale(1); opacity: 1; }
+}
+@keyframes draw-line {
+  0%   { transform: translateX(-100%); }
+  100% { transform: translateX(0%); }
+}
+@keyframes slash-line {
+  0%   { transform: translateX(-100%); }
+  50%  { transform: translateX(0%); }
+  100% { transform: translateX(100%); }
+}
+@keyframes move-prologue {
+  0%   { transform: translateX(0); }
+  100% { transform: translateX(-50%); }
+}
+@keyframes put-point {
+  0%   { transform: scale(0); }
+  70%  { transform: scale(2); }
+  100% { transform: scale(0); }
+}
+@keyframes rotate-word-2 {
+  0%   { transform: rotate(0deg); opacity: 1; }
+  100% { transform: rotate(-90deg); opacity: 0; }
+}
+@keyframes show-bg {
+  0%{opacity: 1;}
+  80%{opacity: 1;}
+  100%{opacity: 0;}
+}
+
+#body {
   width: 100vw;
   height: auto;
   min-height: 100vh;
   overflow: scroll;
+  display: block;
 }
-body::-webkit-scrollbar{
+
+#body::-webkit-scrollbar {
   display: none;
 }
-.bg{
+
+.bg {
   position: absolute;
-  top:0px;
+  top: 0px;
   left: 0px;
   width: 100vw;
-  height: auto;
+  height: 100vh;
   min-height: 100vh;
   background-position: center center;
   background-repeat: repeat;
@@ -20,19 +177,19 @@ body::-webkit-scrollbar{
   background-size: cover;
   opacity: 1;
   background-image: url(../img/bg.jpg);
-  overflow: hidden;
+  overflow: scroll;
 }
 
-.content{
+.contents {
   position: absolute;
-  top:0;
-  left:0;
-  width:  100vw;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
   height: auto;
   min-height: 100vh;
-  overflow: hidden;
+  overflow: scroll;
 }
-.content .logo{
+.contents .logo {
   position: absolute;
   top: 10px;
   left: 10px;
@@ -41,357 +198,17 @@ body::-webkit-scrollbar{
   background-image: url(../img/logo.png);
   z-index: 2;
 }
-.content .bgrar{
+
+.contents .bgrar {
   top: 0px;
+  left: 0px;
   width: 100vw;
-  height: auto;
+  height: 100vh;
   min-height: 100vh;
   background-repeat: no-repeat;
-  background-size:cover;
+  background-size: cover;
   background-position: center;
   background-image: url("../img/raxara.png");
   overflow: hidden;
   opacity: 0.5;
- }
-.content .character{
-  position: absolute;
-  top:500px;
-  right: 0px;
-  width:960px;
-  height:484px;
-  background-image: url(../img/);
-  z-index: 2;
-}
-
-.box{
-  position: absolute;
-  bottom: -20%;
-  left: 0px;
-  width:100vw;
-  height: 30vh;
-  background-color: white;
-  box-shadow:0px 0px 20px 0px  #FFCCFF inset;
-}
-@media screen and (max-width: 450px) {
-  .box{
-    position: absolute;
-    bottom: -20%;
-    left: 0px;
-    width:100vw;
-    height: 50vh;
-    background-color: white;
-    box-shadow:0px 0px 20px 0px  #FFCCFF inset;
-  }
-}
-.box .Information{
-  position: absolute;
-  top:30px;
-  right: 20px;
-  border:1px solid #FFCCFF;
-}
-@media screen and (max-width: 950px){
-  .box .Information{
-    position: absolute;
-    top:unset;
-    bottom: 10px;
-    right: 10px;
-    left:10px;
-    border:1px solid #FFCCFF;
-  }
-}
-td.info1{
-  text-align: left;
-}
-td.info2{
-  text-align: right;
-}
-.textbox_friends {
-  position: relative;
-  top: 20px;
-  left: 20px;
-  width: 550px;
-  height: 130px;
-  display: inline;
-  align-items: left;
-}
-.textbox_friends p{
-  display: inline-block;
-  vertical-align: middle;
-}
-@media screen and (max-width: 450px){
-  .textbox_friends p{
-    zoom:65%;
-  }
-}
-.textbox_mi{
-  position: relative;
-  width: 50px;
-  height: 50px;
-  background-repeat: no-repeat;
-  animation-name: move_mi;
-  animation-duration: 3s;
-  animation-delay: 0s;
-  animation-direction: reverse;
-  animation-timing-function: linear;
-  animation-fill-mode: forwards;
-  animation-iteration-count: infinite;
-}
-.textbox_bou{
-  position: relative;
-  width: 50px;
-  height: 50px;
-  background-repeat: no-repeat;
-  animation-name: move_bou;
-  animation-duration: 3s;
-  animation-delay: 0.2s;
-  animation-direction: reverse;
-  animation-timing-function: linear;
-  animation-fill-mode: forwards;
-  animation-iteration-count: infinite;
-}
-.textbox_nn{
-  position: relative;
-  width: 50px;
-  height: 50px;
-  background-repeat: no-repeat;
-  animation-name: move_nn;
-  animation-duration: 3s;
-  animation-delay: 0.4s;
-  animation-direction: reverse;
-  animation-timing-function: linear;
-  animation-fill-mode: forwards;
-  animation-iteration-count: infinite;
-}
-.textbox_na{
-  position: relative;
-  width: 50px;
-  height: 50px;
-  background-repeat: no-repeat;
-  animation-name: move_na;
-  animation-duration: 3s;
-  animation-delay: 0.6s;
-  animation-direction: reverse;
-  animation-timing-function: linear;
-  animation-fill-mode: forwards;
-  animation-iteration-count: infinite;
-}
-.textbox_to{
-  position: relative;
-  width: 50px;
-  height: 50px;
-  background-repeat: no-repeat;
-  animation-name: move_to;
-  animation-duration: 3s;
-  animation-delay: 0.8s;
-  animation-direction: reverse;
-  animation-timing-function: linear;
-  animation-fill-mode: forwards;
-  animation-iteration-count: infinite;
-}
-.textbox_mo{
-   position: relative;
-   width: 50px;
-   height: 50px;
-   background-repeat: no-repeat;
-   animation-name: move_mo;
-   animation-duration: 3s;
-   animation-delay: 1s;
-   animation-direction: reverse;
-   animation-timing-function: linear;
-   animation-fill-mode: forwards;
-   animation-iteration-count: infinite;
- }
-.textbox_da{
-  position: relative;
-  width: 50px;
-  height: 50px;
-  background-repeat: no-repeat;
-  animation-name: move_da;
-  animation-duration: 3s;
-  animation-delay: 1.2s;
-  animation-direction: reverse;
-  animation-timing-function: linear;
-  animation-fill-mode: forwards;
-  animation-iteration-count: infinite;
-}
-.textbox_chi{
-  position: relative;
-  width: 50px;
-  height: 50px;
-  background-repeat: no-repeat;
-  animation-name: move_chi;
-  animation-duration: 3s;
-  animation-delay: 1.4s;
-  animation-direction: reverse;
-  animation-timing-function: linear;
-  animation-fill-mode: forwards;
-  animation-iteration-count: infinite;
-}
-.textbox_ex{
-  position: relative;
-  width: 50px;
-  height: 50px;
-  background-repeat: no-repeat;
-  animation-name: move_ex;
-  animation-duration: 3s;
-  animation-delay: 1.6s;
-  animation-direction: reverse;
-  animation-timing-function: linear;
-  animation-fill-mode: forwards;
-  animation-iteration-count: infinite;
-}
-
-@keyframes move_mi {
-  0% {
-    opacity: 0;
-    background-color: #FFFFFF;
-    transform: rotateY(-180deg);
-  }
-  50%{
-    opacity: 1;
-    background-image: url("../img/mi.png");
-    transform: rotateY(0deg);
-  }
-  100%{
-    opacity: 0;
-    background-color: #FFFFFF;
-    transform: rotateY(180deg);
-  }
-}
-
-@keyframes move_bou {
-  0% {
-    opacity: 0;
-    background-color: #FFFFFF;
-    transform: rotateY(-180deg);
-  }
-  50%{
-    opacity: 1;
-    background-image: url("../img/bo.png");
-    transform: rotateY(0deg);
-  }
-  100%{
-    opacity: 0;
-    background-color: #FFFFFF;
-    transform: rotateY(180deg);
-  }
-}
-@keyframes move_nn {
-  0% {
-    opacity: 0;
-    background-color: #FFFFFF;
-    transform: rotateY(-180deg);
-  }
-  50%{
-    opacity: 1;
-    background-image: url("../img/nn.png");
-    transform: rotateY(0deg);
-  }
-  100%{
-    opacity: 0;
-    background-color: #FFFFFF;
-    transform: rotateY(180deg);
-  }
-}
-@keyframes move_na {
-  0% {
-    opacity: 0;
-    background-color: #FFFFFF;
-    transform: rotateY(-180deg);
-  }
-  50%{
-    opacity: 1;
-    background-image: url("../img/na.png");
-    transform: rotateY(0deg);
-  }
-  100%{
-    opacity: 0;
-    background-color: #FFFFFF;
-    transform: rotateY(180deg);
-  }
-}
-@keyframes move_to {
-  0% {
-    opacity: 0;
-    background-color: #FFFFFF;
-    transform: rotateY(-180deg);
-  }
-  50%{
-    opacity: 1;
-    background-image: url("../img/to.png");
-    transform: rotateY(0deg);
-  }
-  100%{
-    opacity: 0;
-    background-color: #FFFFFF;
-    transform: rotateY(180deg);
-  }
-}
-@keyframes move_mo {
-  0% {
-    opacity: 0;
-    background-color: #FFFFFF;
-    transform: rotateY(-180deg);
-  }
-  50%{
-    opacity: 1;
-    background-image: url("../img/mo.png");
-    transform: rotateY(0deg);
-  }
-  100%{
-    opacity: 0;
-    background-color: #FFFFFF;
-    transform: rotateY(180deg);
-  }
-}
-@keyframes move_da {
-  0% {
-    opacity: 0;
-    background-color: #FFFFFF;
-    transform: rotateY(-180deg);
-  }
-  50%{
-    opacity: 1;
-    background-image: url("../img/da.png");
-    transform: rotateY(0deg);
-  }
-  100%{
-    opacity: 0;
-    background-color: #FFFFFF;
-    transform: rotateY(180deg);
-  }
-}
-@keyframes move_chi {
-  0% {
-    opacity: 0;
-    background-color: #FFFFFF;
-    transform: rotateY(-180deg);
-  }
-  50%{
-    opacity: 1;
-    background-image: url("../img/chi.png");
-    transform: rotateY(0deg);
-  }
-  100%{
-    opacity: 0;
-    background-color: #FFFFFF;
-    transform: rotateY(180deg);
-  }
-}
-@keyframes move_ex {
-  0% {
-    opacity: 0;
-    background-color: #FFFFFF;
-    transform: rotateY(-180deg);
-  }
-  50%{
-    opacity: 1;
-    background-image: url("../img/!.png");
-    transform: rotateY(0deg);
-  }
-  100%{
-    opacity: 0;
-    background-color: #FFFFFF;
-    transform: rotateY(180deg);
-  }
 }
